@@ -102,6 +102,9 @@ public:
 
 		DMCS_LOG_TRACE(port << ": SHUTDOWN requested");
 
+		delete un;
+		un = 0;
+
 		return;
 	      }
 	    else
@@ -172,6 +175,9 @@ public:
 			  }
 		      }
 		  }
+
+		delete un;
+		un = 0;
 
 	      }
 	  }
