@@ -15,6 +15,9 @@
 	* include/network/NeighborOut.h: Fix memory leaks.
 	* src/solver/RelSatSolver.cpp: Likewise.
 	* src/dmcs/StreamingDMCS.cpp: Likewise.
+	* include/network/RouterThread.h: Likewise.
+	* src/network/JoinThread.cpp: Likewise.
+	* src/network/OutputThread.cpp: Likewise.
 
 2011-02-22  Minh Dao Tran  <dao@kr.tuwien.ac.at>
 
